--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "dotenv": "^16.4.5",
     "ink": "^6.3.0",
     "ink-select-input": "^6.2.0",
+    "ink-text-input": "^6.0.0",
+    "ink-ui": "^0.4.0",
     "react": "^19.0.0"
   },
   "devDependencies": {
