Update ESLint configuration and dependencies; enhance import/export functionality
- Added eslint-plugin-react-hooks to enforce React hooks rules.
- Updated package versions to 0.1.0 in package.json and package-lock.json.
- Refactored ImportContext and NewEnvForm components to improve error handling and performance.
- Enhanced schema parsing in the export functionality for better type safety and validation.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "metaobject-import-export",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "private": true,
   "type": "module",
   "description": "CLI TUI (Ink) for metaobject import/export",
@@ -36,6 +36,7 @@
     "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "tsx": "^4.16.0",
     "typescript": "^5.4.0",
     "typescript-eslint": "^8.43.0"
